data/derived/fa15/progs/unify/prog0458.ml.out
Characters 71-93:
  (10*o, bigAdd(mulByDigit o*m, l1 l))
               ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
